--- a/src/index.css
+++ b/src/index.css
@@ -93,7 +93,10 @@ label {
   grid-template-columns: 1fr;
   -ms-grid-rows: auto;
   grid-template-rows: auto;
-  grid-gap: 1rem; }
+  grid-gap: 1rem;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
   @media (min-width: 992px) {
     .grid-container {
       -ms-grid-columns: 1fr 1fr;
@@ -121,6 +124,10 @@ body {
   letter-spacing: 2px; }
 
 /* Sign in / Register */
+@media (min-width: 992px) {
+  .signin-info, .namecard {
+    margin-top: 10rem; } }
+
 .signin-info .logo {
   text-align: center; }
   .signin-info .logo img {
@@ -138,17 +145,19 @@ body {
   background: white;
   -webkit-box-shadow: 0 3px 6px 1px #b8b8b8;
   box-shadow: 0 3px 6px 1px #b8b8b8; }
-
-.card-content h2 {
-  text-align: center; }
-
-.card-content p {
-  text-align: center; }
+  .namecard .card-content h2 {
+    text-align: center; }
+  .namecard .card-content p {
+    text-align: center; }
+  @media (min-width: 992px) {
+    .namecard .card-content {
+      margin: 0 auto;
+      max-width: 20rem; } }
 
 .card-punchhole {
-  width: 1rem;
-  height: 1rem;
-  margin: 1rem auto;
+  width: 1.5rem;
+  height: 1.5rem;
+  margin: 2rem auto;
   border-radius: 50%;
   -webkit-box-shadow: inset 0 3px 6px 1px #b8b8b8;
   box-shadow: inset 0 3px 6px 1px #b8b8b8; }
