--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -37,7 +37,7 @@ ul.point {
 	}
 }
 
-input[type="email"], input[type="password"] {
+input[type="email"], input[type="password"], input[type="text"], input[type="tel"], input[type="number"] {
 	width: 100%;
 	margin: 0.5rem 0 1rem 0;
 	padding: 0.5rem 2rem;
