--- a/src/index.css
+++ b/src/index.css
@@ -145,7 +145,7 @@ body {
   .signin-info .logo img {
     height: 6rem; }
 
-.signin-info h1 {
+.signin-info h1, .signin-info h2 {
   text-align: center; }
 
 .signin-info .signin-content {
@@ -174,4 +174,36 @@ body {
   -webkit-box-shadow: inset 0 3px 6px 1px #b8b8b8;
   box-shadow: inset 0 3px 6px 1px #b8b8b8; }
 
+.radio-usertype {
+  text-align: center; }
+  .radio-usertype input[type="radio"] {
+    opacity: 0; }
+    .radio-usertype input[type="radio"]:checked + label {
+      color: white;
+      background: #00AEEF; }
+    .radio-usertype input[type="radio"]:not(:checked) + label {
+      background: #ffffff; }
+  .radio-usertype label {
+    display: inline-block;
+    padding: 1rem 2rem;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-weight: 500;
+    cursor: pointer; }
+
 /* Dashboard */
+.btn-primary, .btn-secondary {
+  display: inline-block;
+  width: 100%;
+  padding: 1rem 2rem;
+  text-transform: uppercase;
+  letter-spacing: 2px;
+  text-decoration: none; }
+  .btn-primary:hover, .btn-secondary:hover {
+    opacity: 0.8;
+    cursor: pointer; }
+
+.btn-primary {
+  background: #00AEEF;
+  border: none;
+  color: white; }
