--- a/src/scss/_content.scss
+++ b/src/scss/_content.scss
@@ -52,7 +52,7 @@ body {
 		}
 	}
 
-	h1 {
+	h1,h2 {
 		text-align: center;
 	}
 
@@ -93,4 +93,50 @@ body {
 	box-shadow: inset 0 3px 6px 1px $color-gray;
 }
 
+.radio-usertype {
+	text-align: center;
+
+	input[type="radio"] {
+		opacity: 0;
+
+		&:checked+label {
+			color: white;
+			background: $color-primary;
+		}
+
+		&:not(:checked)+label {
+			background: $color-white;
+		}
+	}
+
+	label {
+		display: inline-block;
+		padding: 1rem 2rem;
+		text-transform: uppercase;
+		letter-spacing: 2px;
+		font-weight: 500;
+		cursor: pointer;
+	}	
+}
+
 /* Dashboard */
+
+.btn-primary, .btn-secondary {
+	display: inline-block;
+	width: 100%;
+	padding: 1rem 2rem;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	text-decoration: none;
+
+	&:hover {
+		opacity: 0.8;
+		cursor: pointer;
+	}
+}
+
+.btn-primary {
+	background: $color-primary;
+	border: none;
+	color: white;
+}
