--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -30,7 +30,7 @@ ul.point {
   margin: 0;
 
   li {
-    background: url('../img/point.svg') no-repeat left top 0.5rem;
+    background: url('/img/point.svg') no-repeat left top 0.5rem;
     background-size: 20px;
     padding: 0.5rem 0 0 30px;
     display: block;
