--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -19,6 +19,7 @@ code {
 @import 'layouts';
 @import 'content';
 @import 'animation';
+@import 'modal';
 
 //Components
-@import 'Components/calendar';
+@import 'Components/Calendar/calendar';
