--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -6,11 +6,9 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-h1 {
+h1, h2 {
   font-weight: 500;
 }
-
-h2,
 h3 {
   font-weight: 300;
 }
@@ -57,5 +55,5 @@ input[type="checkbox"] {
 }
 
 label {
-  font-weight: 300;
+  font-weight: 500;
 }
