--- a/src/scss/_modal.scss
+++ b/src/scss/_modal.scss
@@ -7,6 +7,7 @@
   margin-right: -50%;
   transform: translate(-50%, -50%);
   z-index: 2000;
+  padding: 2rem;
 }
 
 .ReactModal__Overlay--after-open {
