--- a/src/scss/_typography.scss
+++ b/src/scss/_typography.scss
@@ -6,7 +6,8 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-h1, h2 {
+h1,
+h2 {
   font-weight: 500;
 }
 h3 {
@@ -39,16 +40,32 @@ ul.point {
     display: block;
   }
 }
-input[type="email"], input[type="password"], input[type="text"], input[type="tel"], input[type="number"] {
-	width: 100%;
-	margin: 0.5rem 0 1rem 0;
-	padding: 0.5rem 2rem;
+
+ul.info {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  li {
+    background: url('./../img/info.svg') no-repeat left top 0.5rem;
+    background-size: 20px;
+    padding: 0.5rem 0 0 30px;
+    display: block;
+  }
+}
+input[type='email'],
+input[type='password'],
+input[type='text'],
+input[type='tel'],
+input[type='number'] {
+  width: 100%;
+  margin: 0.5rem 0 1rem 0;
+  padding: 0.5rem 2rem;
 }
 
-input[type="checkbox"] {
+input[type='checkbox'] {
   margin-right: 0.5rem;
   margin-bottom: 2rem;
-  
+
   & + label {
     margin-right: 2rem;
   }
